--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/67/App_Store_%28iOS%29.svg/2048px-App_Store_%28iOS%29.svg.png" alt="App Store">
                     App Store
                 </button>
-                <button onclick="openLink('https://chainmentor.net/chainmentor.apk')">
+                <button onclick="openLink('https://github.com/chivoinformacione/chainmentor/releases/download/android/chainmentor.apk')">
                     <img src="https://cdn-icons-png.flaticon.com/512/8814/8814615.png" alt="Android APK">
                     Android APK
                 </button>
@@ -283,11 +283,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f6/Huawei_AppGallery.svg/2048px-Huawei_AppGallery.svg.png" alt="Huawei AppGallery">
                     Huawei AppGallery
                 </button>
-                <button onclick="openLink('https://chainmentor.net/chainmentor.apk')">
+                <button onclick="openLink('https://github.com/chivoinformacione/chainmentor/releases/download/android/chainmentor.apk')">
                     <img src="https://cdn.awsde0-fusion.fds.api.mi-img.com/white-paper/privacy/appicon/get-apps.png?GalaxyAccessKeyId=5151729087601&Expires=9223372036854775807&Signature=FuMlu/skMh/+/zgYSbEff+76d50=" alt="Xiaomi GetApps">
                     Xiaomi GetApps
                 </button>
-                <button onclick="openLink('https://chainmentor.net/chainmentor.apk')">
+                <button onclick="openLink('https://github.com/chivoinformacione/chainmentor/releases/download/android/chainmentor.apk')">
                     <img src="https://static.vecteezy.com/system/resources/previews/017/396/800/non_2x/google-play-store-mobile-apps-logo-free-png.png" alt="Play Market">
                     Play Market
                 </button>
